--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       rel="stylesheet"
     />
 
-    <title>Smart Route</title>
+    <title>Smart Route | Safer Roads, Smarter Solutions</title>
   </head>
   <body class="bg-stone-100 text-stone-700">
     <div id="root"></div>
